tests/src/frontend/typechecking/invalid/memoized_awaitable_no_async.sk
memoized fun bad(): ^Int {
  async {
    42
  }
}
